--- a/style.css
+++ b/style.css
@@ -8,5 +8,5 @@
     height: 100vh;
     position: relative;
     overflow: hidden;
-    background: linear-gradient(to right, #1B4965, #E71D36)
+    background: linear-gradient(to bottom right, #215779, #cb4555)
 }
