--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
-*{
+body {
     margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
-.main{
+.heading {
+    position: absolute;
+    text-align: center;
+    top: 30%;
     width: 100%;
+}
+.heading h1 {
+    color: rgb(252, 252, 252);
+    font-size: 70px;
+}
+.heading h3 {
+    color: rgb(253, 253, 253);
+    font-size: 30px;
+}
+#particles-js {
+    background: linear-gradient(to bottom right, #215779, #226c9755);
     height: 100vh;
-    position: relative;
-    overflow: hidden;
-    background: linear-gradient(to bottom right, #215779, #cb4555)
 }
