--- a/style.css
+++ b/style.css
@@ -1,10 +1,25 @@
+* {
+    margin: 0;
+    padding: 0
+}
+::selection {
+
+    background: #000;
+    color: #fff;
+  }
 body {
     margin: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Heebo', sans-serif;
+}
+#particles-js {
+    background: linear-gradient(to bottom right, #215779, #226c9755);
+    height: 100vh;
+    width: 100%
 }
 .heading {
     position: absolute;
-    text-align: center;
+    text-align: left;
+    margin-left: 100px;
     top: 30%;
     width: 100%;
 }
@@ -16,7 +31,9 @@ body {
     color: rgb(253, 253, 253);
     font-size: 30px;
 }
-#particles-js {
-    background: linear-gradient(to bottom right, #215779, #226c9755);
+.intro {
+    background-color: white;
     height: 100vh;
+    width: 100%;
+    font-size: 10px 
 }
